save-point: Refactoring.